--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.77.3",
     "@react-three/fiber": "^8.13.3",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
     "@types/gsap": "^3.0.0",
+    "@types/locomotive-scroll": "^4.1.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -23,11 +25,16 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "framer-motion": "^10.12.16",
+    "framer-motion-3d": "^10.12.16",
     "gsap": "^3.12.1",
+    "locomotive-scroll": "^4.1.4",
+    "mongodb": "^5.7.0",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-locomotive-scroll": "^0.2.2",
+    "split-type": "^0.3.3",
     "tailwindcss": "3.3.2",
     "three": "^0.153.0",
     "typescript": "5.1.3"
