--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.77.3",
     "@react-three/fiber": "^8.13.3",
     "@types/axios": "^0.14.0",
