--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chroma-js": "^2.4.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
@@ -36,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-locomotive-scroll": "^0.2.2",
     "split-type": "^0.3.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "three": "^0.153.0",
     "typescript": "5.1.3"
