--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.77.3",
     "@react-three/fiber": "^8.13.3",
@@ -34,6 +35,7 @@
     "locomotive-scroll": "^5.0.0-beta.8",
     "mongodb": "^5.7.0",
     "next": "^14.0.1-canary.3",
+    "plaiceholder": "^3.0.0",
     "postcss": "8.4.24",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
