--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "macro": "node ./macro/index.ts",
+    "macro": "npx tsc ./macro/index.ts && node ./macro/index.js",
     "lint": "next lint"
   },
   "dependencies": {
