--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@plaiceholder/next": "^3.0.0",
+    "@prisma/client": "^5.7.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.77.3",
     "@react-three/fiber": "^8.13.3",
@@ -39,6 +40,7 @@
     "next": "^14.0.1-canary.3",
     "plaiceholder": "^3.0.0",
     "postcss": "8.4.24",
+    "prisma": "^5.7.1",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
